package model;

public enum Color {
    Red, White, Blue, Yellow
}
